127/ Buff Goggles using modded piece system.
128/ Changed Token of Wrath and its exclusive perk.
129/ Added starter item into Token of Sloth.
130/ Changed Wooden type bow enchantment.
131/ Added scroll of fire, water and magic missile
132/ Added scroll of teleportation.
133/ Minor small updated to Enchantment system variable
134/ Reworked Musket.
135/ Reworked Red Ryder.
136/ Added new field for projectile.
137/ Reworked The Undertaker.
138/ Changed how player can recharge their energy in skill.
139/ Complete removal of cool down from skill system.
140/ Deleted the following skills: IchorArrowRain, JesterArrowRain, CursedArrowRain, CholorophyteArrowRain, Skill_HolyArrow, Skill_UnholyArrow, FrostburnArrowRain, FireArrowRain and HellFireArrowRain.
141/ Deleted FireBall skill and IceAge skill.
142/ Various skill reworked.
143/ Fixed a problem where loot box always give a full set of armor of same type.
144/ Deleted 3 relic templates (skill cool down, gun fire rate and static defenses).
145/ Removed Static Defenses stat and Skill cool down stat.
146/ Skill's stats adjustment and some minor skill effect adjustment.
147/ Added a new skill classification: Skill empowered.
148/ Update a lot of skill classification.
149/ Fixed a problem where opening skill UI while activate results in adding active skills infinitely.
150/ Added buff texture for Vortex Blessing.
151/ Added debuff texture.
152/ Added Unforgiving.
153/ Made projectile critical always crit system more aligned with the mod current always crit system.
154/ Added in "Lower visual quality" config for player that reach toward endgame.
155/ Made Shattered Sky not affected by attack speed
156/ Finish Unforgiving in code.
157/ Implemented outro attack function for synergy mod item.
158/ Added in "CustomDataValue" for projectile which basically act like ai[3].
159/ Added in a weapon guide value and make it functional.
160/ Added in a sneaky secret for chaotic prefix