@@ -1969,6 +1969,7 @@ Mods: {
 					"Comeback is always good"
 					Every 6th shot you shot out a burst of 6 bullets
 					+10 critical strike chance and 25% attack speed when below 50% hp
+					Grant life steal effect on bullet from The Underdog when below 25% hp
 					'''
 			}
 
